--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "JATE",
   "version": "1.0.0",
+  "engines": {
+    "node": "19.1.0",
+    "npm": "8.19.3"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
