--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^5.74.0"
+    "webpack-cli": ""
   }
 }
