--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "JATE",
   "version": "1.0.0",
   "engines": {
-    "node": "19.1.0",
-    "npm": "8.19.3"
+    "node": "19.1.0"
   },
   "description": "",
   "main": "server.js",
@@ -21,13 +20,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4",
-    "webpack": "^5.74.0"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": ""
+    "nodemon": "^2.0.4"
   }
 }
